--- a/10minutes.ipynb
+++ b/10minutes.ipynb
@@ -291,11 +291,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myvar = 3\n",
     "myvar += 2\n",
@@ -304,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -315,7 +326,7 @@
        "4"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,13 +1136,81 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Divers\n",
+    "\n",
+    "Les conditions peuvent être chaînées. 1 < a < 3 vérifie que x est inférieur à 3 et supérieur à 1.\n",
+    "Vous pouvez utiliser **del** pour supprimer les variables ou objets des tableaux.\n",
+    "Les comprehensions list fournissent une puissant miyen de créer et manipuler les lises. Cela consiste en une expression suivie par une boucle **for** suivi d'un zero ou plus de conditions **if** ou boucles **for** comme suit :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5, 6, 8, 10, 9, 12, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst1 = [1,2,3]\n",
+    "lst2 = [3,4,5]\n",
+    "print ([x * y for x in lst1 for y in lst2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ([x for x in lst1 if 4 > x > 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check if a condition is true for any items.\n",
+    "# \"any\" returns true if any item in the list is true.\n",
+    "any([i % 3 for i in [3, 3, 4, 4, 3]])\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1140,34 +1219,109 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# This is because 4 % 3 = 1, and 1 is true, so any()\n",
+    "# returns True."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for how many items a condition is true.\n",
+    "sum(1 for i in [3, 3, 4, 4, 3] if i == 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "del lst1[0]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (lst1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "del lst1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les variables globales sont déclarées en drhors des fonctions et peuvent être lues sans déclarations spécifiques mais si vous voulez les écrire, vous devez les déclarer au début de la fonction avec le terme \"global\" sinon Python va bind cet objet a une nouvelle variable locale (attention à ça, c'estun petit piège dans lequel vous pouvez tomber si vous ne le savez pas)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "number = 5\n",
+    "\n",
+    "def myfunc():\n",
+    "    # This will print 5.\n",
+    "    print (number)\n",
+    "\n",
+    "def anotherfunc():\n",
+    "    # This raises an exception because the variable has not\n",
+    "    # been bound before printing. Python knows that it an\n",
+    "    # object will be bound to it later and creates a new, local\n",
+    "    # object instead of accessing the global one.\n",
+    "    print (number)\n",
+    "    number = 3\n",
+    "\n",
+    "def yetanotherfunc():\n",
+    "    global number\n",
+    "    # This will correctly change the global.\n",
+    "    number = 3"
+   ]
   }
  ],
  "metadata": {
